[package]
name = "secret_gateway"
version = "0.1.0"
authors = ["kent-3"]
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["contract"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]
# disable contract feature to disable all instantiate/execute/query exports
contract = []

[dependencies]
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm = "0.4.1"
base64 = "0.12.3"
hex = "0.4.3"
secp256k1 = { version = "0.21.3", features = ["serde", "recovery"] }
chacha20poly1305 = "0.9.0"
secret-toolkit = { version = "0.4.0", features = ["crypto", "utils", "serialization", "storage"] }
secret-toolkit-crypto = { version = "0.3.0", features = ["hash", "rand", "ecc-secp256k1"] }
secret-toolkit-serialization = { version = "0.3.0", features = ["base64"] }
sha3 = "0.10.4"

[dev-dependencies]
cosmwasm-schema = "0.10.1"
