[package]
name = "secret_gateway"
version = "0.1.0"
authors = ["leor,kent-3,SecretSaturn"]
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["contract"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]
# disable contract feature to disable all instantiate/execute/query exports
contract = []

[dependencies]
cosmwasm-schema = { version = "1.1.0", optional = true }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
schemars = "0.8.11"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.0"
base64 = "0.21.0"
hex = "0.4.3"
sha3 = "0.10.4"
secp256k1 = { version = "0.26.0", features = ["serde", "recovery"] }
chacha20poly1305 = "0.9.1"
secret-toolkit = { version = "0.10.0", default-features = false, features = ["crypto", "utils", "serialization", "storage"] }
secret-toolkit-crypto = { version = "0.10.0", features = ["hash", "rand", "ecc-secp256k1"] }
secret-toolkit-serialization = { version = "0.10.0", features = ["base64"] }

[[bin]]
name = "schema"
required-features = ["schema"]
