[package]
name = "secret_rng"
version = "0.1.0"
authors = ["SecretSaturn, kent-3"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["rand"]
rand = ["rand_core"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" , features = ["stargate"]}
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
rand_core = { version = "0.6.4", default-features = false, optional = true }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["utils", "storage", "crypto"] }
secret-toolkit-crypto = { version = "0.10.0", features = ["rand"] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
base64 = "0.22.1"
secret-path = { git = "https://github.com/SecretSaturn/SecretPath", branch = "main", package = "secret_gateway", default-features = false }
anybuf = "0.5.0"
