[package]
name = "secret-credit-score"
version = "0.1.0"
authors = ["kent-3"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.7.1" }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
schemars = "0.7"
serde-json-wasm = "0.4.1"
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { version = "0.5.0", features = ["serialization", "storage", "utils"] }
tnls = { path = "../../TNLS-Gateways/secret", package = "secret_gateway", default-features = false }

[dev-dependencies]
cosmwasm-schema = "0.10.1"
