[package]
name = "secret_gateway"
version = "0.1.0"
authors = ["kent-3"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm = "0.4.1"
# snafu = { version = "0.6.3" }
base64 = "0.12.3"
secp256k1 = { version = "0.21.3", features = ["serde"] }
chacha20poly1305 = "0.9.0"
secret-toolkit = { version = "0.3.0", features = ["crypto", "utils", "serialization", "incubator"] }
secret-toolkit-crypto = { version = "0.3.0", features = ["hash", "rand", "ecc-secp256k1"] }
secret-toolkit-incubator = { version = "0.3.1", features = ["cashmap"] }
secret-toolkit-serialization = { version = "0.3.0", features = ["base64"] }
# rand_core = { version =  "0.5.1", default-features = false }
# rand = "0.7.3"
# rand_chacha = { version = "0.2.2", default-features = false }

[dev-dependencies]
cosmwasm-schema = "0.10.1"
