[package]
name = "encrypt_payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm = "0.4.1"
snafu = { version = "0.6.3" }
secp256k1 = { version = "0.21.3", features = ["serde"] }
chacha20poly1305 = "0.9.0"
secret-toolkit = { version = "0.3.0", features = ["crypto", "utils", "serialization"] }
secret-toolkit-crypto = { version = "0.3.0", features = ["hash", "rand", "ecc-secp256k1"] }
secret-toolkit-serialization = { version = "0.3.0", features = ["base64"] }
