[package]
name = "solana-gateway"
version = "0.1.0"
description = "Solana Secretpath Gateway"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_gateway"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", features = ["idl-build"] }
base64 = "0.22.1"
solana-program = "1.16.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10.8"