[package]
name = "solana-secretpath-gateway"
version = "0.2.3"
description = "Solana Secretpath Gateway"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_gateway"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
serde = ["serde_json"]

[dependencies]
anchor-lang = {version = "=0.30.1", features = ["idl-build"]}
anchor-spl = { version = "=0.30.1", features = ["idl-build"] }
base64 = "0.22.1"
solana-program = "=1.18.25"
serde = { version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", optional = true}
hex = "0.4"
solana-security-txt = "1.1.1"
bytemuck = "1.7.3"